增加base标签，修改资源路径为相对，为了让博客部署在blog/子目录下;

--- a/about.html
+++ b/about.html
@@ -542,7 +542,8 @@
                 e.preventDefault();
                 window.scrollTo({
                     "behavior": "smooth",
-                    "top": target.offsetTop
+                    "top": 
+                    target.offsetTop
                 });
             }
         })
